# payment-api

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_14_2002-836ad8dca769_create_user_table.py  2024_02_15_1618-9a3bc2f5d548_create_account_table.py  2024_02_15_1640-04e33f97569e_update_fields_for_account.py  2024_02_16_1656-54f7a0c61896_create_token_table.py  2024_02_16_1801-f37b067cf04c_update_field_for_token.py  2024_02_26_1723-17c7384f6409_create_table_balancechange.py
api_v1/: __init__.py
api_v1/account/: crud.py  schemas.py
api_v1/auth/: crud.py  schemas.py  utils.py  views.py
api_v1/balance_change/: crud.py  schemas.py  services.py  views.py
api_v1/users/: crud.py  schemas.py
core/: config.py
core/database/: __init__.py  db_settings.py
core/database/models/: __init__.py  account.py  balance_change.py  base.py  token.py  user.py
core/redis/: redis_settings.py
